@@ -101,6 +101,9 @@ Fixed bugs:
 
 * <symlink> could create cyclic links.  Bugzilla Report 25181.
 
+* <zip whenempty="skip"> didn't work in a common situation.  Bugzilla
+  Report 22865.
+
 Other changes:
 --------------
 * doc fix concerning the dependencies of the ftp task
